--- a/CSS/Style.css
+++ b/CSS/Style.css
@@ -8,12 +8,14 @@
 
     --primary-submit-button: #B3C8CF;
     --secondary-submit-button: rgb(183, 38, 6);
+    --hover-button-brown: #E5E1DA;
 
     --primary-fonts-color: #494949;
     --secondary-fonts-color: #FFFFFF;
     --primary-bg-color: #F1F0E8;
     --primary-text-box-color: #E3F6F5;
-    --primary-hover-color: 89A8B2;
+    --primary-hover-color: #89A8B2;
+
 
     --heading-font-size: 36px;
     --sub-heading-font-size: 24px;
@@ -30,47 +32,49 @@
     line-height: 1.6;
 }
 
+body {
+    background-color: #F1F0E8;
+}
+
 .page-wrapper {
     max-width: 100vw;
     margin: 0 auto;
-    background-color: #F1F0E8;
+    
 
     
 }
 .menu__navigation-list {
     background-image: var(--bg-gradient);
-    width: 100%;
     display: flex;
     justify-content: space-between;
-    align-items: center;
-    font-size: 1.25rem;
-    font-family: "Arimo";
-    font-weight: 500;
-    color: var(--primary-fonts-color);
-    padding: 3rem;
-    
+    padding: 3rem 5rem;
 
    
     ul {
-        list-style-type: none;
         display: flex;
+        align-items: center;
         cursor: pointer;
     }
-    li {
-        width:250px;
-        padding: 1rem 0;
+    a {
         text-align: center;
+        text-decoration: none;
+        color: var(--primary-fonts-color);
+        font-size: 1.25rem;
+        font-family: "Arimo";
+        font-weight: 500;
+        padding: 1rem 1.5rem;
     }
 
-    li:hover {
-        background-color: #E5E1DA;
+   ul a:hover {
+        background-color: var(--hover-button-brown);
         color: var(--primary-fonts-color);
-        border-radius: 5px;
+        
+        
         
     }
 
-    figure img {
-        width: 150px;
+    a img {
+        width: 300px;
       
     }
 
@@ -82,13 +86,11 @@
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
-    width: 100%;
     height: 700px;
     margin: auto;
     
 .search-box__form {
     background-color: var(--primary-bg-color);
-    width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -134,7 +136,7 @@
 .offers-container__box {
     display: flex;
     flex-direction: column;
-    width: 90%;
+    padding: 0 5rem;
     align-items: center;
     margin: auto;
     
@@ -209,11 +211,12 @@
     grid-template-columns: repeat(4, 1fr);
     grid-auto-rows: auto;
     gap: 1rem;
-    padding: 2rem 0;
+    padding: 5rem;
     font-family: var(--secondary-title-fonts);
     color: var(--primary-fonts-color);
-    width: 90%;
-    margin: auto;
+    background-image: var(--bg-gradient);
+    margin-top: 2rem;
+    
 }
 .news-letter {
     display: flex;
@@ -227,13 +230,17 @@
     .news-email {
         padding: 0.5rem;
         width: 272px;
-        position: absolute;
+        
         
     }
     .fa-solid.fa-paper-plane {
-        position: relative;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        transform: translateX(-40px);
         width: 35px;
         height: 35px;
+}
 }
 }
 .footer-about-hotel {
@@ -244,7 +251,42 @@
     a {
         text-decoration: none;
         color: var(--primary-fonts-color);
-        font-weight: 500;
+        font-weight: 700;
+    }
+    a:hover {
+        text-decoration: underline;
     }
 }
+.footer-social__social-media__icon {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: flex-start;
+    gap: 3rem;
+    cursor: pointer;
+    
+    .fa-brands{
+        transform: scale(2);
+        
+
+    }
+
 }
+
+
+.room__image__information {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+
+
+    img {
+        width: 60%;
+        aspect-ratio: 4 / 2;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+}
+}
+
