--- a/CSS/Style.css
+++ b/CSS/Style.css
@@ -1,9 +1,11 @@
-@import url('https://fonts.googleapis.com/css2?family=Arimo:ital,wght@0,400..700;1,400..700&family=Quicksand:wght@300..700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Cormorant+Infant:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Libre+Bodoni:ital,wght@0,400..700;1,400..700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Libre+Bodoni:ital,wght@0,400..700;1,400..700&display=swap');
+
 
 :root {
-    --primary-heading-fonts: "Quicksand";
-    --secondary-title-fonts: "Arimo";
+    --primary-heading-fonts: "Libre Bodoni", serif;
+    --secondary-title-fonts: "Cormorant Infant", serif;
     
 
     --primary-submit-button: #B3C8CF;
@@ -206,6 +208,8 @@ body {
     
 }
 
+/*FOOTER*/
+
 .grid-footer {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
@@ -273,20 +277,175 @@ body {
 
 }
 
+/*ABOUT HOTEL*/
 
 .room__image__information {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
-
+    margin: 2rem 3rem;
 
     img {
         width: 60%;
         aspect-ratio: 4 / 2;
         display: flex;
-        flex-direction: row;
+        flex-direction: column;
         align-items: center;
+        padding: 1rem;
+        border-radius: 10px;
+        border: none;
+        box-shadow: 0 2px 6px 0 rgba(3, 3, 3, 0.25); 
+    }
+    h1 {
+        font-family: var(--primary-heading-fonts);
+        color: var(--primary-fonts-color);
+        font-size: var(--heading-font-size);
+        font-weight: 100;
+        letter-spacing: 5px;
+        text-align: center;
+        margin-top: 2rem;
+        
+    }
+    h2 {
+        font-family: var(--secondary-title-fonts);
+        color: var(--primary-fonts-color);
+        font-size: var(--sub-heading-font-size);
+        font-weight: 100;
+        text-align: center;
+        margin: 0 250px;
+        
+        }
 }
+.btn-booking-offers {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    margin: 2rem;
+    
+    .booking-btn__button, .offers-btn__link {
+        margin-left: 3rem;
+        padding: 0.5rem 1rem;
+        border: none;
+        font-family: var(--primary-heading-fonts);
+        color: var(--primary-fonts-color);
+        background-color: var(--primary-hover-color);
+        text-decoration: none;
+        font-size: 18px;
+        font-weight: 100;
+    }
 }
+
+/*ROOM GALLORY SECTION*/
+.hotellet-container__grid {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(3, 1fr);
+    gap: 1rem;
+    padding: 3rem 5rem;
+    background-color: #E5E1DA;
+
+    .room-info__link-booking img {
+        width: 570px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        border: none;
+        border-radius: 5px;
+        box-shadow: 0 2px 6px 0 rgba(3, 3, 3, 0.25);
+        }
+    .room-type {
+        font-family: var(--primary-heading-fonts);
+        color: var(--primary-fonts-color);
+        font-weight: 100;
+        margin-top: 1rem;
+        }
+    .room-information {
+        font-family: var(--secondary-title-fonts);
+        color: var(--primary-fonts-color);
+        font-size: 24px;
+        width: 570px;
+        }
+}
+.more-images-btn__button-link {
+    border: none;
+    font-style: italic;
+    background-color: #E5E1DA;
+    a {
+        text-decoration: none;
+        color: var(--primary-hover-color);
+        font-family: var(--primary-heading-fonts);
+        font-weight: 100;
+        padding: 0.5rem;
+    }
+    a:hover {
+        text-decoration: underline;
+    }
+}
+
+/*FACILITY SECTION*/
+
+.facility-gallory {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    .facility-container__title {
+        text-align: center;
+        padding: 2rem 5rem;
+        }
+
+    h2 {
+        font-family: var(--primary-heading-fonts);
+        font-weight: 100;
+        font-size: var(--sub-heading-font-size);
+        color: var(--primary-fonts-color);
+        }
+    
+}
+.facility-container__grid {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    gap: 1.5rem;
+    margin: 1rem 5rem;
+    
+
+    .more-info__flex img {
+        width: 400px;
+        aspect-ratio: 4 / 3;
+        border: none;
+        border-radius: 5px;
+        box-shadow: 0 2px 6px 0 rgba(3, 3, 3, 0.25);
+
+        }
+        .articles-detail__box {
+            width: 400px;
+            font-family: var(--secondary-title-fonts);
+            color: var(--primary-fonts-color);
+            font-size: var(--h3-font-size);
+            font-weight: 300;
+            font-size: 18px;
+        }
+        
+}
+.read-more-btn__button-link {
+    border: none;
+    color: var(--primary-hover-color);
+    font-family: var(--primary-heading-fonts);
+    font-weight: 100;
+    font-style: italic;
+
+    a {
+        text-decoration: none;
+        
+    }
+
+    a:hover {
+        text-decoration: underline;
+    }
+}
+
 
