--- a/CSS/Style.css
+++ b/CSS/Style.css
@@ -13,8 +13,8 @@
     /*COLOR*/
     --primary-submit-button: #7eaab9;
     --secondary-submit-button: rgb(183, 38, 6);
-    --hover-button-brown: #E5E1DA;
-    --primary-fonts-color: #494949;
+    --hover-button-brown: #d5cfc4;
+    --primary-fonts-color: #252525;
     --secondary-fonts-color: #FFFFFF;
     --primary-bg-color: #F1F0E8;
     --primary-text-box-color: #E3F6F5;
@@ -26,7 +26,7 @@
     --article-font-size: 18px;
 
     /*BACKGROUND AND BOX SHADOW*/
-    --bg-gradient: linear-gradient(to top,#E5E1DA,#fffffd, #E5E1DA);
+    --bg-gradient: linear-gradient(to top,#d5cfc4,#f1f0e8, #d5cfc4);
     --main-box-shadow: 0 2px 6px 0 rgba(3, 3, 3, 0.3);
 }
 * {
@@ -37,13 +37,13 @@
 }
 
 body {
-    background-color: #fff;
+    background-color: var(--primary-bg-color);
 }
 .page-wrapper {
     min-width: 1000px;
 }
 .heading {
-    padding: 0 7rem;
+    padding: 50px 200px;
     background-image: var(--bg-gradient);
     display: flex;
     justify-content: space-between;
@@ -54,19 +54,21 @@ body {
         align-items: center;
         cursor: pointer;
         transform: translateY(10px);
+    
     }
     .menu__link {
-        text-align: center;
         text-decoration: none;
         color: var(--primary-fonts-color);
-        font-size: var(--article-font-size);
+    }
+    .menu__title {
+        text-align: center;
         font-family: var(--primary-heading-fonts);
         word-spacing: 0.5rem;
         font-weight: 500;
-        padding: 1.5rem;
+        padding: 1rem 2rem;
     }
-    .menu__link:hover {
-            text-decoration: underline;
+    .menu__title:hover {
+            background-color: var(--hover-button-brown);
             color: var(--primary-fonts-color);
              
         }
@@ -85,7 +87,8 @@ body {
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
-    height: 700px;
+    height: 750px;
+    
 
     .container__form {
         background-color: var(--primary-bg-color);
@@ -295,6 +298,7 @@ body {
         padding: 1rem;
         border-radius: 10px;
         border: none;
+        background-color: var(--hover-button-brown);
         box-shadow: 0 2px 6px 0 rgba(3, 3, 3, 0.25);
         margin-bottom: 3rem; 
     }
@@ -455,7 +459,7 @@ body {
 .search {
     display: grid;
     gap: 45px;
-    grid-template-columns: min-content minmax(0px, 1fr);
+    grid-template-columns: repeat(min-width(300px, 1fr));
     grid-auto-flow: row;
     padding: 0 7rem;
     background-color: var(--primary-bg-color);
@@ -524,6 +528,7 @@ body {
     display: flex;
     flex-direction: column;
     place-items: center;
+    max-width: 600px;
    
 }
 
@@ -561,7 +566,51 @@ body {
     }
 }
 
+/*RESULTS PAGE*/
 
+.results {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: auto;
+    gap: 2rem;
+    
+}
+.results__heading-title {
+    grid-column: 1 / span 3;
+    grid-row: 1;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    font-weight: 500;
+    height: 400pxS;
+
+    .results__text--center {
+        text-align: center;
+    }
+    
+}
+.results__flex-box {
+    grid-column: 1;
+    grid-row: 2 / span 7;
+}
+.results-room__grid {
+    grid-column: 2 / span 2;
+    grid-row: 2 / span 7;
+
+    .results-info {
+        margin: 0;
+    }
+}
+.results__box--sticky {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    font-size: var(--article-font-size);
+    width: 300px;
+    height: 500px;
+    background-image: var(--bg-gradient);
+    box-shadow: var(--main-box-shadow);
+}
 
 
 
